// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test med saker 1`] = `
<div
  className="dittnav-lenkepanel-top-container"
>
  <div
    className="panel oversiktspanel dittnav-lenkepanel-stor panel--border"
  >
    <div
      className="oversiktspanel__header"
    >
      <div
        className="oversiktspanel__overskrift"
      >
        <div
          className="typo-systemtittel"
        >
          <span>
            Dine siste saker
          </span>
        </div>
      </div>
      <div
        className="oversiktspanel__header-lenketekst typo-normaltekst"
      >
        <a
          className="oversiktspanel__header-lenke"
          href="http://localhost:9222/saksoversikt/"
          id="dekorator-bottomborder-overstyring"
        >
          <span>
            Se alle dine saker (5)
          </span>
          <i
            className="nav-frontend-chevron chevronboks chevron--hoyre"
            id="oversiktspanel__chevron"
          />
        </a>
      </div>
    </div>
    <div>
      <hr />
    </div>
    <div
      className="oversiktspanel__liste"
    >
      <div
        className="sak-container"
      >
        <a
          className="sak-lenke"
          href="http://localhost:9222/saksoversikt/tema/undefined"
          id="dekorator-bottomborder-overstyring"
        >
          <div
            className="sak-temanavn typo-undertittel"
          >
            Tema 1
            <i
              className="nav-frontend-chevron chevronboks sak-chevron chevron--hoyre"
            />
          </div>
          <div
            className="sak-status typo-undertekst"
          >
            <span>
              Du har  søknader under behandling. 
            </span>
            <span>
              Sist oppdatert: 
            </span>
            <span>
              2019 M07 22
            </span>
          </div>
        </a>
      </div>
      <div
        className="sak-container"
      >
        <a
          className="sak-lenke"
          href="http://localhost:9222/saksoversikt/tema/undefined"
          id="dekorator-bottomborder-overstyring"
        >
          <div
            className="sak-temanavn typo-undertittel"
          >
            Tema 2
            <i
              className="nav-frontend-chevron chevronboks sak-chevron chevron--hoyre"
            />
          </div>
          <div
            className="sak-status typo-undertekst"
          >
            <span>
              Du har  søknader under behandling. 
            </span>
            <span>
              Sist oppdatert: 
            </span>
            <span>
              2019 M07 23
            </span>
          </div>
        </a>
      </div>
      <div
        className="saksoversikt-footer"
      >
        <span
          className="typo-undertekst"
        >
          <a
            className="saksoversikt-footer__lenke"
            href="http://localhost:9222/saksoversikt/"
            id="dekorator-bottomborder-overstyring"
          >
            <span>
              Du har tre flere saker.
            </span>
          </a>
        </span>
      </div>
    </div>
  </div>
  <div
    className="dittnav-lenkepanel-liten"
    id="cols-layout"
  >
    <a
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/utbetalingsoversikt/"
      onClick={null}
    >
      <div
        className="lenkepanel__innhold lenkepanel__heading"
      >
        <div
          className="lenkepanel__ikon"
        >
          
        </div>
        <div>
          <h2
            className="typo-undertittel"
          >
            <span>
              Dine utbetalinger
            </span>
          </h2>
          
        </div>
      </div>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      className="lenkepanel dittnav-lenkepanel-liten-item last lenkepanel--border"
      href="http://localhost:9222/mininnboks/"
      onClick={null}
    >
      <div
        className="lenkepanel__innhold lenkepanel__heading"
      >
        <div
          className="lenkepanel__ikon"
        >
          
        </div>
        <div>
          <h2
            className="typo-undertittel"
          >
            <span>
              Innboks
            </span>
          </h2>
          
        </div>
      </div>
      <span
        className="lenkepanel__indikator"
      />
    </a>
  </div>
</div>
`;

exports[`Snapshot test uten saker 1`] = `
<div
  className="dittnav-lenkepanel-top-container"
>
  <div
    className="panel oversiktspanel dittnav-lenkepanel-stor panel--border"
  >
    <div
      className="oversiktspanel__header"
    >
      <div
        className="oversiktspanel__overskrift"
      >
        <div
          className="typo-systemtittel"
        >
          <span>
            Dine siste saker
          </span>
        </div>
      </div>
      <div
        className="oversiktspanel__header-lenketekst typo-normaltekst"
      >
        <a
          className="oversiktspanel__header-lenke"
          href="http://localhost:9222/saksoversikt/"
          id="dekorator-bottomborder-overstyring"
        >
          Din saksoversikt
          <i
            className="nav-frontend-chevron chevronboks chevron--hoyre"
            id="oversiktspanel__chevron"
          />
        </a>
      </div>
    </div>
    <div>
      <hr />
    </div>
    <div
      className="oversiktspanel__liste"
    >
      <div
        className="saksoversikt-footer typo-undertekst"
      >
        <span
          className="typo-undertekst"
        >
          Du har ingen saker. 
          <a
            className="saksoversikt-footer__lenke"
            href="#"
            id="dekorator-bottomborder-overstyring"
          >
            <span>
              Finner du ikke saken din?
            </span>
          </a>
        </span>
      </div>
    </div>
  </div>
  <div
    className="dittnav-lenkepanel-liten"
    id="cols-layout"
  >
    <a
      className="lenkepanel dittnav-lenkepanel-liten-item lenkepanel--border"
      href="http://localhost:9222/utbetalingsoversikt/"
      onClick={null}
    >
      <div
        className="lenkepanel__innhold lenkepanel__heading"
      >
        <div
          className="lenkepanel__ikon"
        >
          
        </div>
        <div>
          <h2
            className="typo-undertittel"
          >
            <span>
              Dine utbetalinger
            </span>
          </h2>
          
        </div>
      </div>
      <span
        className="lenkepanel__indikator"
      />
    </a>
    <a
      className="lenkepanel dittnav-lenkepanel-liten-item last lenkepanel--border"
      href="http://localhost:9222/mininnboks/"
      onClick={null}
    >
      <div
        className="lenkepanel__innhold lenkepanel__heading"
      >
        <div
          className="lenkepanel__ikon"
        >
          
        </div>
        <div>
          <h2
            className="typo-undertittel"
          >
            <span>
              Innboks
            </span>
          </h2>
          
        </div>
      </div>
      <span
        className="lenkepanel__indikator"
      />
    </a>
  </div>
</div>
`;
